# XLog

./: .gitignore  CMakeLists.txt  Logger.sln  Logger.vcxproj  Logger.vcxproj.filters  README.md
example/: main.cpp
include/: log_fac.h  log_format.h  log_output.h  logger.h  xconfig.h  xlog_format.h  xml_format.h
include/xlog/: log_console_output.h  log_fileoutput.h  log_format.h  logger.h  xconfig.h  xlog_format.h
src/: log_console_output.cpp  log_fac.cpp  log_fileoutput.cpp  logger.cpp  xlog_format.cpp  xml_format.cpp
